# actix_scraper

./: Cargo.toml  Dockerfile  README.md  azure-pipelines.yml
src/: config.rs  errors.rs  handlers.rs  login.rs  main.rs  model.rs  scraper.rs
static/: index.html
