[package]
name = "actix_scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.8"
actix-web = "4.11.0"
anyhow = "1.0.100"
chromiumoxide = "0.7.0"
env_logger = "0.11.8"
futures = "0.3.31"
rand = "0.9.2"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = {version = "1.48.0", features = ["full"]}
tracing = "0.1.41"
